--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html><head><title>TEst</title></head><body>
-Hello World for stg
+Hello World for stg ready to push stg upstream
 </body></html>
